<?xml version='1.0' encoding='utf-8'?>
<package format="2">
  <name>kdl_parser_py</name>
  <version>2.3.0</version>
  <description>
   The Kinematics and Dynamics Library (KDL) defines a tree structure
   to represent the kinematic and dynamic parameters of a robot
   mechanism. <tt>kdl_parser_py</tt> provides Python tools to construct a KDL
   tree from an XML robot representation in URDF.
  </description>

  <author email="jonathan.bohren@gmail.com">Jonathan Bohren</author>
  <author email="jacquelinekay1@gmail.com">Jackie Kay</author>
  <maintainer email="clalancette@osrfoundation.org">Chris Lalancette</maintainer>
  <maintainer email="sloretz@osrfoundation.org">Shane Loretz</maintainer>

  <license>BSD</license>

  
  <url type="repository">https://github.com/ros2/kdl_parser</url>
  <url type="bugtracker">https://github.com/ros2/kdl_parser/issues</url>

  <buildtool_depend version_gte="0.5.68">ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend version_gte="1.3.0">orocos_kdl</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>ros_testing</build_depend>

  <exec_depend version_gte="1.3.0">orocos_kdl</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>urdfdom_py</exec_depend>
  <exec_depend>python_orocos_kdl</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
